[build-system]
requires = ["setuptools>=77", "wheel", "torch>=2.8", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[project]
name = "mlkv-plus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyYAML==6.0.2",
    "pandas",
    "matplotlib",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "torch>=2.8"
]

[tool.setuptools]
packages = ["mlkv_plus"]
